--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Github Repos</string>
+    <string name="content_description_user_avatar">User avatar</string>
 </resources>
